# Atena-IA

./: .env  .gitignore  CONNECTORS_README.md  LICENSE  README.md  RELATORIO_CONSCIENCIA_ATENA.md  RELATORIO_COPA_2026_ATENA.md  RELATORIO_EVOLUCAO_ATENA.md  RELATORIO_MODULOS_FASCINANTES.md  Selfmod engine v2 · PY  atena  atena.patch  atena_fix.patch  atena_live_dashboard.py  atena_neurocausal_swarm.py  build.sh  conftest.py  corrigir.sh  decoder.txt  main.py  memoria_atena.json  pyproject.toml  quantum_innovation.py  render.yaml  requirements.txt  setup_and_run.py  teste_atena.sh  vercel.json
Atena-agente--main/: .gitignore  README.md  atena_google_search.py  enviar.sh  index.html  main.py  pyproject.toml  requirements.txt
Atena-agente--main/.github/workflows/: atena-self-evolve.yml
Atena-agente--main/atena_evolution/codex_reports/: module_smoke_suite_20260504_222313.json
Atena-agente--main/core/: atena_advanced_market_monitor.py  atena_counterfactual_reasoning.py  atena_daemon.py  atena_dependency_installer.py  atena_digital_organism_audit.py  atena_digital_organism_live_cycle.py  atena_ethics_engine.py  atena_evolution_scorecard.py  atena_fix.py  atena_github_evolution_scan.py  atena_hacker_recon.py  atena_learning_status.py  atena_llm_router.py  atena_local_dashboard.py  atena_meta_learner.py  atena_neuro_symbolic_verifier.py  atena_parallel_evolution.py  atena_production_api.py  atena_push_safe.py  atena_quantum_optimizer.py  atena_response_cache.py  atena_runtime_contracts.py  atena_self_test.py  atena_subagent_solver.py  atena_swarm_intelligence.py  atena_terminal_assistant.py  atena_terminal_python_script.py  atena_ultimate.py  enterprise_memory_rag.py  external_code_discovery.py  external_code_smoke_runner.py  heavy_mode_selector.py  neural_dashboard.py  nrs_mirror_world.py  objective_cycle_runner.py  planner_executor_critic.py  production_advanced_suite.py  production_contracts.py  production_guardrails.py  production_observability.py  (+7 more)
Atena-agente--main/docs/: 10_ESSENCIAIS_AVANCADOS_ATENA_2026-04-05.md  ANALISE_COMPLETA_ATENA_EXECUCAO_2026-04-05.md  ANALISE_COMPLETA_ATENA_RECOMENDACOES_2026-04-05.md  ATENA_ENDPOINT_READINESS_2026-05-02.md  ATENA_GITHUB_EVOLUTION_ABSORBED.md  EVOLUTION_SELF_PUSH_GUIDE.md  EXECUCAO_ASSISTANT_MISSAO_COMPLEXA_2026-04-05.md  EXECUCAO_ATENA_2026-04-04.md  EXECUCAO_ATENA_CRIACAO_COMPLEXA_2026-05-03.md  EXECUCAO_ATENA_DEPENDENCIAS_2026-05-03.md  EXECUCAO_ATENA_DEPENDENCIAS_2026-05-05.md  EXECUCAO_ATENA_EMPRESA_PRODUCAO_2026-04-17.md  EXECUCAO_ATENA_MISSAO_IMPOSSIVEL_2026-05-03.md  GUARDIAN_REPORT_2026-04-05.md  IA_TRENDS_2026_REPORT.md  MELHORIAS_EVOLUCAO_ATENA_2026-04-05.md  MISSAO_GENIAL_ATENA_2026-04-05.md  MISSAO_GENIAL_ATENA_2026-04-06.md  NEURAL_REALITY_SYNC_CONCEPT.md  PLANO_AVANCADO_ATENA_2026-04-18.md  PLANO_DESENVOLVIMENTO_QTN.md  PROPOSTA_LAB_PESQUISA_AUTONOMA_2026-04-05.md  RECOMENDACOES_AVANCADAS_ATENA_2026-04-15.md  RELATORIO_EMPRESARIAL_ATENA_INTERNET_2026-05-04.md  RELATORIO_MISSAO_QACO_AGI.md  TESTE_EXTREMO_KYROS_2026-04-05.md  TESTE_MODULO_PROGRAMACAO_2026-04-05.md  VALIDACAO_SKILLS_ATENA_2026-04-05.md  ai_repo_watchlist.json  tech_frontier_expansion_report.md
Atena-agente--main/evolution/code/: atena_current.py
Atena-agente--main/evolution/models/: mutation_predictor.pkl
Atena-agente--main/evolution/states/: mission_bidc_agi_report.json  mission_qaco_agi_report.json  portfolio_optimization_results.json
Atena-agente--main/examples/: atena_windows_guest_demo.py  recursive_vm_atena_demo.py
Atena-agente--main/modules/: AtenaSysAware.py  Voice.py  __init__.py  atena_advanced_essentials.py  atena_agent_orchestrator.py  atena_code_module.py  atena_codex.py  atena_control_bridge.py  atena_engine.py  atena_langchain_bridge.py  atena_post_quantum_crypto.py  atena_telemetry_hub.py  atena_ui_engine.py  autom#U00e1tion_actuator.py  base.py  computer_actuator.py  dynamic_requester.py  federated_learning.py  file_actuator.py  game_theory_simulator.py  graph_memory.py  hyper_evolution.py  hyperparameter_optimizer.py  meu_util.py  mission_orchestrator.py  notification_actuator.py  self_reflection.py  services.py  vector_memory.py
Atena-agente--main/modules/missions/: atena_mission.py  quick_test.py
Atena-agente--main/protocols/: DIALOGO_SINGULARIDADE.md  atena_agi_external_validation_mission.py  atena_agi_uplift_mission.py  atena_complex_research_mission.py  atena_crypto_mission.py  atena_digital_organism_live_cycle_mission.py  atena_enterprise_readiness_mission.py  atena_module_smoke_mission.py  atena_orchestrator_mission.py  atena_production_mission.py  atena_professional_launch_mission.py  atena_research_lab_mission.py  atena_sleep_cycle.py  atena_tot_mission.py
Atena-agente--main/protocols/atena_evolution/: atena_state.json
Atena-agente--main/scripts/: atena_cli.py  audit_repo_connectivity.sh  benchmark_evolution_evidence.py  evolution_go_no_go.sh  push_main.sh  python_script.py  run_computer_mode_code_scan.sh  self_test.py  test_atena_delivery.sh
Atena-agente--main/setup/: colab_bootstrap.sh  deploy_atena.sh  install_service.sh
Atena-agente--main/skills/atena-orchestrator/: SKILL.md
Atena-agente--main/skills/neural-reality-sync/: SKILL.md
Atena-agente--main/tests/: conftest.py
Atena-agente--main/tests/unit/: test_api_main.py  test_atena_capability_challenge.py  test_atena_code_module_extended.py  test_atena_codex.py  test_atena_module_preloader.py  test_atena_neurocausal_memory_fabric.py  test_bootstrap_portable.py  test_create_saas_stub.py  test_curiosity_engine.py  test_env_bootstrap.py  test_event_bus.py  test_evolution_scorecard.py  test_evolution_stagnation_guard.py  test_internet_continuous_evolution.py  test_llm_router_auto_orchestrate.py  test_llm_router_open_access.py  test_memory_maintenance.py  test_mission_orchestrator.py  test_planner_executor_critic.py  test_production_api.py  test_production_gate.py  test_production_guardrails.py  test_production_perfection.py  test_production_self_audit.py  test_production_suite.py  test_rate_limiter.py  test_rlhf_fixed.py  test_scan_github_ai_repos.py  (+7 more)
(+484 files in other folders)
