# pyproject.toml — ATENA Omega
# Build backend: setuptools (único; hatch removido para evitar conflito)
# Versão gerenciada via setuptools-scm (sem hardcode estático)

[build-system]
requires = [
    "setuptools>=69.0.0",
    "wheel>=0.42.0",
    "setuptools-scm>=8.0.0",
    "cython>=3.0.0",
    "numpy>=1.24.0",
]
build-backend = "setuptools.build_meta"

# =============================================================================
# PROJECT METADATA
# =============================================================================

[project]
name = "atena-omega"
dynamic = ["version"]
description = "ATENA Omega — Advanced Autonomous AI System with Self-Evolution"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "ATENA Auto Team",  email = "team@atena.ai"},
    {name = "Danilo",           email = "danilo@atena.ai"},
]
maintainers = [
    {name = "ATENA Core Team", email = "core@atena.ai"},
]
keywords = [
    "ai", "autonomous", "evolution", "llm", "multi-agent",
    "rag", "self-improving", "agentic", "automation",
    "quantum-inspired", "neural-symbolic", "cognitive-architecture",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: English",
]

# ---------------------------------------------------------------------------
# Core runtime dependencies
# ---------------------------------------------------------------------------
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0,<1.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "polars>=0.20.0,<1.0.0",
    "anyio>=4.0.0",
    "uvloop>=0.19.0;sys_platform!='win32'",
    "rich>=13.7.0,<15.0.0",
    "click>=8.1.0,<9.0.0",
    "typer>=0.9.0,<1.0.0",
    "prompt-toolkit>=3.0.0,<4.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "msgspec>=0.18.0",
    "orjson>=3.9.0",
    "pyyaml>=6.0,<7.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "python-dotenv>=1.0.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<6.0.0",
    "playwright>=1.40.0,<2.0.0",
    "selenium>=4.15.0,<5.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "websockets>=12.0,<14.0",
    "redis>=5.0.0,<6.0.0",
    "cachetools>=5.3.0,<6.0.0",
    "aiocache>=0.12.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
    "jwcrypto>=1.5.0",
    "loguru>=0.7.0,<1.0.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.0,<3.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "more-itertools>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "pytest-randomly>=3.15.0",
    "pytest-rerunfailures>=13.0",
    "black>=23.12.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "tox>=4.11.0",
    "nox>=2023.4.22",
    "commitizen>=3.13.0,<4.0.0",
]
prod = [
    "gunicorn>=21.2.0",
    "supervisor>=4.2.0",
    "docker>=6.1.0",
    "kubernetes>=28.1.0",
]
ml = [
    "torch>=2.1.0,<3.0.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0,<5.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "langchain>=0.1.0,<1.0.0",
    "langchain-community>=0.0.10",
    "llama-cpp-python>=0.2.0",
    "ctransformers>=0.2.27",
    "openai>=1.6.0,<2.0.0",
    "anthropic>=0.7.0,<1.0.0",
    "tiktoken>=0.5.0",
    "pinecone-client>=3.0.0",
    "qdrant-client>=1.7.0",
    "weaviate-client>=3.24.0",
]
vectordb = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "pgvector>=0.2.0",
]
web = [
    "streamlit>=1.29.0,<2.0.0",
    "gradio>=4.16.0,<6.0.0",
    "nicegui>=1.4.0",
    "dash>=2.15.0",
    "plotly>=5.18.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.43b0",
    "psutil>=5.9.0,<7.0.0",
    "sentry-sdk>=1.39.0,<3.0.0",
    "newrelic>=9.7.0",
    "datadog>=0.48.0",
]
distributed = [
    "celery>=5.3.0,<6.0.0",
    "kombu>=5.3.0,<6.0.0",
    "dask>=2024.1.0",
    "ray>=2.8.0",
    "apache-beam>=2.52.0",
]
db = [
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "pymongo>=4.5.0,<5.0.0",
    "motor>=3.3.0,<4.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.12.0,<2.0.0",
]
security = [
    "authlib>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.0",
    "oauthlib>=3.2.0",
]
testing = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-sugar>=0.9.0",
    "coverage>=7.4.0",
    "hypothesis>=6.92.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "pydoctor>=23.9.0",
]
all = ["atena-omega[dev,prod,ml,vectordb,web,monitoring,distributed,db,security,testing,docs]"]

[project.urls]
Homepage      = "https://github.com/AtenaAuto/ATENA-"
Repository    = "https://github.com/AtenaAuto/ATENA-"
Documentation = "https://docs.atena.ai"
Issues        = "https://github.com/AtenaAuto/ATENA-/issues"
Changelog     = "https://github.com/AtenaAuto/ATENA-/releases"
Discord       = "https://discord.gg/atena"

[project.scripts]
atena            = "cli.main:app"
atena-daemon     = "daemon.manager:run"
atena-benchmark  = "benchmark.runner:main"
atena-self-heal  = "evolution.self_heal:main"
atena-monitor    = "monitoring.dashboard:start"

[project.entry-points."atena.plugins"]
memory = "plugins.memory:register"
vision = "plugins.vision:register"
audio  = "plugins.audio:register"
web    = "plugins.web_scraper:register"
api    = "plugins.api_gateway:register"

# =============================================================================
# VERCEL CONFIGURATION
# =============================================================================
[tool.vercel]
entrypoint = "core.atena_local_dashboard:Handler"

# =============================================================================
# BUILD — setuptools only
# =============================================================================

[tool.setuptools]
include-package-data = true
zip-safe             = false

[tool.setuptools.packages.find]
include = ["atena_omega*", "core*", "modules*", "protocols*", "skills*", "plugins*"]
exclude = [
    "tests*", "docs*", "examples*", "benchmarks*",
    "evolution*", "atena_evolution*",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md", "*.txt", "*.html", "*.css", "*.js", "*.wasm", "*.proto"]
"atena_omega" = ["py.typed"]

[tool.setuptools_scm]
write_to      = "atena_omega/_version.py"
version_scheme = "release-branch-semver"
local_scheme  = "no-local-version"

# =============================================================================
# BLACK
# =============================================================================

[tool.black]
line-length     = 88
target-version  = ["py310", "py311", "py312"]
include         = '\.pyi?$'
preview         = true
magic_trailing_comma = true
extend-exclude  = '''
/(
  \.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv | \.env
  | build | dist | evolution | reference_dna | atena_evolution
  | analysis_reports | benchmarks | docs/_build | __pycache__
)/
'''

# =============================================================================
# ISORT
# =============================================================================

[tool.isort]
profile                     = "black"
line_length                 = 88
multi_line_output           = 3
include_trailing_comma      = true
force_grid_wrap             = 0
use_parentheses             = true
ensure_newline_before_comments = true
skip_glob                   = [
    "evolution/*", "reference_dna/*", "atena_evolution/*",
    "analysis_reports/*", "benchmarks/*",
]
known_first_party  = ["atena_omega", "core", "modules", "protocols", "skills", "plugins"]
known_third_party  = [
    "requests", "aiohttp", "numpy", "pandas", "polars",
    "rich", "typer", "pydantic", "loguru", "tenacity",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# RUFF
# =============================================================================

[tool.ruff]
line-length    = 88
target-version = "py310"
src = ["atena_omega", "core", "modules", "protocols", "skills", "plugins"]
exclude = [
    "evolution", "reference_dna", "atena_evolution", "analysis_reports",
    "benchmarks", "docs", ".git", ".venv", "__pycache__", "build", "dist",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM",
    "RET", "ARG", "PTH", "RUF", "TCH", "PIE", "FLY", "PERF",
    "G", "LOG", "Q", "RSE", "SLF", "SLOT", "INT", "YTT",
]
ignore = ["E501", "B008", "C901", "SIM108", "RET505"]
preview  = true
fixable  = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py"     = ["F401", "D104"]
"tests/*"         = ["S101", "PLR2004", "D", "ARG"]
"experimental/*"  = ["ALL"]

# =============================================================================
# MYPY
# =============================================================================

[tool.mypy]
python_version           = "3.10"
warn_return_any          = true
warn_unused_configs      = true
disallow_untyped_defs    = true
disallow_incomplete_defs = true
check_untyped_defs       = true
disallow_untyped_decorators = true
no_implicit_optional     = true
warn_redundant_casts     = true
warn_unused_ignores      = true
warn_no_return           = true
warn_unreachable         = true
strict_equality          = true
strict_optional          = true
follow_imports           = "normal"
ignore_missing_imports   = true
show_error_codes         = true
pretty                   = true
color_output             = true
enable_error_code        = [
    "ignore-without-code", "redundant-expr", "truthy-bool",
    "overload-exists",     "possibly-undefined",
]

[[tool.mypy.overrides]]
module = ["astor.*", "chromadb.*", "faiss.*", "streamlit.*", "gradio.*", "langchain.*", "transformers.*", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs    = false

# =============================================================================
# PYLINT
# =============================================================================

[tool.pylint.main]
max-line-length  = 88
ignore           = [
    "evolution", "reference_dna", "atena_evolution",
    "analysis_reports", "tests", "docs",
]
ignore-patterns  = ["^test_.*\\.py$", ".*_test\\.py$"]
jobs             = 0

[tool.pylint."messages control"]
disable = [
    "C0111", "C0103", "R0913", "R0914", "W0212",
    "R0801", "R0902", "R0903", "R0904",
]
enable     = ["missing-module-docstring"]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "df", "ax", "id", "db", "fp", "cb", "ctx", "env"]
extension-pkg-allow-list = ["numpy", "pydantic", "polars"]

# =============================================================================
# PYTEST
# =============================================================================

[tool.pytest.ini_options]
minversion    = "7.4"
testpaths     = ["tests"]
python_files  = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = [
    "-ra", "--strict-markers", "--strict-config", "--tb=short",
    "--showlocals", "--maxfail=5", "-p", "no:cacheprovider",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
    "security: security-related tests",
    "performance: performance benchmarks",
    "smoke: smoke tests for validation",
    "gpu: tests requiring GPU",
    "network: tests requiring network access",
]
asyncio_mode = "auto"
timeout      = 300

# =============================================================================
# COVERAGE / BANDIT / COMMITIZEN / CIBUILDWHEEL
# =============================================================================

[tool.coverage.run]
source = ["atena_omega", "core", "modules", "protocols", "skills", "plugins"]
omit = [
    "*/tests/*", "*/test_*.py", "*/__pycache__/*",
    "*/evolution/*", "*/reference_dna/*", "*/atena_evolution/*",
    "*/analysis_reports/*", "*/scripts/*", "*/__init__.py",
]
parallel    = true
concurrency = ["thread", "multiprocessing"]
branch      = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod", "pass"]
omit         = ["*/__pycache__/*", "*/tests/*"]
precision    = 2
show_missing = true
fail_under   = 80

[tool.bandit]
exclude_dirs = ["tests", "evolution", "reference_dna", "atena_evolution", "analysis_reports", "docs", "examples"]
skips      = ["B101", "B601", "B603", "B607"]
severity   = "HIGH"
confidence = "HIGH"
recursive  = true
format     = "json"
output     = "bandit_report.json"

[tool.pyright]
include = ["atena_omega", "core", "modules", "protocols", "skills", "plugins", "scripts", "cli"]
exclude = ["**/__pycache__", "evolution", "atena_evolution", "analysis_reports", "tests", "docs", "examples"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.commitizen]
name    = "cz_conventional_commits"
version = "3.2.0"
version_files = [
    "pyproject.toml:version = \"\\d+\\.\\d+\\.\\d+\"",
    "atena_omega/__init__.py:__version__ = \"\\d+\\.\\d+\\.\\d+\"",
]
tag_format      = "v$version"
bump_message    = "chore(release): bump version $current_version -> $new_version"
change_type_order = ["BREAKING", "feat", "fix", "refactor", "docs", "chore"]

[tool.cibuildwheel]
build    = "cp310-manylinux* cp311-manylinux* cp312-manylinux*"
archs    = ["auto64"]
test-command  = "pytest {project}/tests -v -m 'not slow'"
manylinux-x86_64-image = "manylinux2014"
build-frontend = "build"
