[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "atena-omega"
version = "3.2.0"
description = "🔱 Sistema de IA Autônomo Avançado com Auto-Evolução"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ATENA Auto Team", email = "team@atena.ai"},
    {name = "Danilo", email = "danilo@atena.ai"}
]
maintainers = [
    {name = "ATENA Core Team", email = "core@atena.ai"}
]
keywords = [
    "ai", "autonomous", "evolution", "llm", "multi-agent",
    "rag", "self-improving", "agentic", "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
]
ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
]
web = [
    "streamlit>=1.29.0",
    "gradio>=4.16.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "psutil>=5.9.0",
]
all = [
    "atena-omega[dev,ml,web,monitoring]",
]

[project.urls]
Homepage = "https://github.com/AtenaAuto/ATENA-"
Repository = "https://github.com/AtenaAuto/ATENA-"
Documentation = "https://github.com/AtenaAuto/ATENA-/blob/main/README.md"
Issues = "https://github.com/AtenaAuto/ATENA-/issues"
Changelog = "https://github.com/AtenaAuto/ATENA-/releases"

[project.scripts]
atena = "scripts.atena_cli:main"
atena-assistant = "scripts.assistant:main"
atena-benchmark = "scripts.benchmark:main"
atena-self-test = "scripts.self_test:main"

[project.entry-points."atena.plugins"]
example = "modules.example_plugin:register"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "modules*", "protocols*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md", "*.txt", "*.html", "*.css", "*.js"]

# =============================================================================
# Code Formatting & Linting
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | build
  | dist
  | evolution
  | reference_dna
  | atena_evolution
  | analysis_reports
  | benchmarks
  | docs/_build
)/
'''
preview = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "evolution/*",
    "reference_dna/*",
    "atena_evolution/*",
    "analysis_reports/*",
    "benchmarks/*",
]
known_first_party = ["core", "modules", "protocols", "skills", "plugins"]
known_third_party = ["requests", "aiohttp", "numpy", "pandas", "rich", "click", "pydantic"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# Pylint Configuration
# =============================================================================

[tool.pylint.main]
max-line-length = 100
ignore = ["evolution", "reference_dna", "atena_evolution", "analysis_reports", "tests", "docs"]
ignore-patterns = ["test_*.py", "*_test.py"]

[tool.pylint."messages control"]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-many-public-methods
]
good-names = [
    "i", "j", "k", "ex", "Run", "_", "x", "y", "z",
    "df", "ax", "id", "db", "fp", "cb", "ctx", "env"
]
extension-pkg-allow-list = ["numpy", "pydantic"]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-branches = 15
max-statements = 60
max-parents = 7
max-attributes = 15

[tool.pylint.format]
max-line-length = 100
max-module-lines = 2000
single-line-if-stmt = true

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.basic]
good-names-rgxs = "^[a-z][a-z0-9]*$"
bad-names = ["foo", "bar", "baz", "tmp", "temp"]
argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
class-naming-style = "PascalCase"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--showlocals",
    "--maxfail=5",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
    "security: security-related tests",
    "performance: performance benchmarks",
    "smoke: smoke tests for validation",
]
asyncio_mode = "auto"

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["core", "modules", "protocols", "skills", "plugins"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/evolution/*",
    "*/reference_dna/*",
    "*/atena_evolution/*",
    "*/analysis_reports/*",
    "*/scripts/*",
    "*/__init__.py",
]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "def _private_method",
]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
title = "ATENA Ω Test Coverage"

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_imports = "normal"
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
pretty = true
color_output = true

[[tool.mypy.overrides]]
module = [
    "astor.*",
    "chromadb.*",
    "faiss.*",
    "streamlit.*",
    "altair.*",
    "gradio.*",
    "langchain.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# =============================================================================
# Bandit (Security) Configuration
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "evolution", "reference_dna", "atena_evolution", "analysis_reports", "docs"]
skips = ["B101", "B601", "B311", "B404", "B603"]
severity = "HIGH"
confidence = "HIGH"
recursive = true
format = "json"
output = "bandit_report.json"

# =============================================================================
# Ruff Configuration (Fast Python Linter)
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["core", "modules", "protocols", "skills", "plugins"]
exclude = [
    "evolution",
    "reference_dna",
    "atena_evolution",
    "analysis_reports",
    "benchmarks",
    "docs",
    ".git",
    ".venv",
    "__pycache__",
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff specific rules
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "SIM108", # use ternary operator
    "RET505", # unnecessary else
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004"]
"experimental/*" = ["ALL"]

[tool.ruff.lint]
preview = true
fixable = ["ALL"]
unfixable = []

# =============================================================================
# Pre-commit Hooks Configuration
# =============================================================================

[tool.pre-commit]
default_install_hook_types = ["pre-commit", "pre-push", "commit-msg"]
default_stages = ["pre-commit", "pre-push"]

# =============================================================================
# Pyright/Pylance Configuration
# =============================================================================

[tool.pyright]
include = ["core", "modules", "protocols", "skills", "plugins", "scripts"]
exclude = ["**/__pycache__", "evolution", "atena_evolution", "analysis_reports", "tests", "docs"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportOptionalSubscript = "warning"

# =============================================================================
# Commitizen (Conventional Commits)
# =============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.2.0"
version_files = [
    "pyproject.toml:version",
    "core/__init__.py:__version__",
]
tag_format = "v$version"
bump_message = "chore(release): bump version $current_version → $new_version"

# =============================================================================
# VSCode Settings
# =============================================================================

[tool.vscode]
python.defaultInterpreterPath = ".venv/bin/python"
python.terminal.activateEnvInCurrentTerminal = true
python.formatting.provider = "black"
python.linting.enabled = true
python.linting.mypyEnabled = true
python.linting.pylintEnabled = true
python.linting.banditEnabled = true
python.testing.pytestEnabled = true
python.testing.unittestEnabled = false

# =============================================================================
# PDM Configuration (Alternative to Pip)
# =============================================================================

[tool.pdm]
distribution = true
version = {source = "file", path = "atena_omega/__init__.py"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

# =============================================================================
# MkDocs Configuration (Documentation)
# =============================================================================

[tool.mkdocs]
site_name = "ATENA Ω Documentation"
site_description = "Documentação completa do sistema ATENA Ω"
site_url = "https://atena-auto.github.io/ATENA-"
theme = "material"

[tool.mkdocs.nav]
index = "index.md"
installation = "installation.md"
usage = "usage.md"
api = "api/index.md"
modules = "modules/index.md"
advanced = "advanced/index.md"

# =============================================================================
# Extras: Environment-specific
# =============================================================================

[tool.dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.cibuildwheel]
build = "cp310-* cp311-*"
archs = ["auto64"]
test-command = "pytest {project}/tests"
